// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createFacetsMap 1`] = `
{
  "mainLanguages:dan": {
    "key": "dan",
    "score": 427,
    "term": "Dansk",
  },
  "mainLanguages:eng": {
    "key": "eng",
    "score": 82,
    "term": "Engelsk",
  },
  "materialTypesGeneral:artikler": {
    "key": "artikler",
    "score": 346,
    "term": "artikler",
  },
  "materialTypesGeneral:bøger": {
    "key": "bøger",
    "score": 74,
    "term": "bøger",
  },
  "materialTypesGeneral:computerspil": {
    "key": "computerspil",
    "score": 26,
    "term": "computerspil",
  },
  "materialTypesGeneral:e-bøger": {
    "key": "e-bøger",
    "score": 38,
    "term": "e-bøger",
  },
  "materialTypesGeneral:film": {
    "key": "film",
    "score": 9,
    "term": "film",
  },
}
`;

exports[`createFilters > should create filters 1`] = `
{
  "accessTypes": [
    "Fysisk",
  ],
  "branchId": [
    "710100",
    "710200",
  ],
  "mainLanguages": [
    "Dansk",
    "Engelsk",
  ],
}
`;

exports[`formatFacetTerms > should format facet terms 1`] = `
{
  "accessTypes": [
    "Fysisk",
  ],
  "mainLanguages": [
    "Dansk",
    "Engelsk",
  ],
}
`;

exports[`getPlaceHolderFacets > should get placeholder facets 1`] = `
[
  {
    "name": "MATERIALTYPESGENERAL",
    "type": "MATERIALTYPESGENERAL",
    "values": [
      {
        "key": "",
        "term": "",
      },
    ],
  },
  {
    "name": "CREATORS",
    "type": "CREATORS",
    "values": [
      {
        "key": "",
        "term": "",
      },
    ],
  },
  {
    "name": "SUBJECTS",
    "type": "SUBJECTS",
    "values": [
      {
        "key": "",
        "term": "",
      },
    ],
  },
  {
    "name": "FICTIONNONFICTION",
    "type": "FICTIONNONFICTION",
    "values": [
      {
        "key": "",
        "term": "",
      },
    ],
  },
  {
    "name": "CHILDRENORADULTS",
    "type": "CHILDRENORADULTS",
    "values": [
      {
        "key": "",
        "term": "",
      },
    ],
  },
  {
    "name": "ACCESSTYPES",
    "type": "ACCESSTYPES",
    "values": [
      {
        "key": "",
        "term": "",
      },
    ],
  },
  {
    "name": "MAINLANGUAGES",
    "type": "MAINLANGUAGES",
    "values": [
      {
        "key": "",
        "term": "",
      },
    ],
  },
  {
    "name": "GENREANDFORM",
    "type": "GENREANDFORM",
    "values": [
      {
        "key": "",
        "term": "",
      },
    ],
  },
  {
    "name": "MATERIALTYPESSPECIFIC",
    "type": "MATERIALTYPESSPECIFIC",
    "values": [
      {
        "key": "",
        "term": "",
      },
    ],
  },
  {
    "name": "FICTIONALCHARACTERS",
    "type": "FICTIONALCHARACTERS",
    "values": [
      {
        "key": "",
        "term": "",
      },
    ],
  },
]
`;
